// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenuItem 指定のパスとリンクのhref属性が一致する 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  color: text.white;
  font-size: sm;
  gap: 4px;
  font-weight: bold;
  -webkit-padding-start: 6px;
  padding-inline-start: 6px;
  -webkit-padding-end: 6px;
  padding-inline-end: 6px;
  padding-top: 4px;
  padding-bottom: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  transition-duration: .25s;
  cursor: pointer;
}

.emotion-0[aria-current=page] {
  background-color: primary.600;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background: primary.400;
}

.emotion-1 {
  width: 5px;
}

<div>
  <a
    class="emotion-0"
    data-cy="SidebarMenuItem"
    data-testid="SidebarMenuItem"
    href="/test"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        data-testid="Icon"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
    テスト
  </a>
</div>
`;

exports[`SidebarMenuItem 正常にレンダリングされている 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  color: text.white;
  font-size: sm;
  gap: 4px;
  font-weight: bold;
  -webkit-padding-start: 6px;
  padding-inline-start: 6px;
  -webkit-padding-end: 6px;
  padding-inline-end: 6px;
  padding-top: 4px;
  padding-bottom: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  transition-duration: .25s;
  cursor: pointer;
}

.emotion-0[aria-current=page] {
  background-color: primary.600;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background: primary.400;
}

.emotion-1 {
  width: 5px;
}

<div>
  <a
    class="emotion-0"
    data-cy="SidebarMenuItem"
    data-testid="SidebarMenuItem"
    href="/test"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        data-testid="Icon"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
    テスト
  </a>
</div>
`;

exports[`props:isCurrent falseの場合、リンクがカレントではない 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  color: text.white;
  font-size: sm;
  gap: 4px;
  font-weight: bold;
  -webkit-padding-start: 6px;
  padding-inline-start: 6px;
  -webkit-padding-end: 6px;
  padding-inline-end: 6px;
  padding-top: 4px;
  padding-bottom: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  transition-duration: .25s;
  cursor: pointer;
}

.emotion-0[aria-current=page] {
  background-color: primary.600;
}

.emotion-0:hover,
.emotion-0[data-hover] {
  background: primary.400;
}

.emotion-1 {
  width: 5px;
}

<div>
  <a
    class="emotion-0"
    data-cy="SidebarMenuItem"
    data-testid="SidebarMenuItem"
    href="/test"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        data-testid="Icon"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
    テスト
  </a>
</div>
`;

exports[`props:isCurrent trueの場合、リンクがカレントとなる 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  color: text.white;
  font-size: sm;
  gap: 4px;
  font-weight: bold;
  -webkit-padding-start: 6px;
  padding-inline-start: 6px;
  -webkit-padding-end: 6px;
  padding-inline-end: 6px;
  padding-top: 4px;
  padding-bottom: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  transition-duration: .25s;
  cursor: pointer;
}

.emotion-0[aria-current=page] {
  background-color: primary.600;
}

.emotion-1 {
  width: 5px;
}

<div>
  <a
    aria-current="page"
    class="emotion-0"
    data-cy="SidebarCurrentMenuItem"
    data-testid="SidebarCurrentMenuItem"
    href="/test"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        data-testid="Icon"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
    テスト
  </a>
</div>
`;
